--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,9 +7,9 @@
     --white: #fff;
 
     //Default layout
-    // --default-layout-header-height: 60px;
-    // --default-layout-width: 100%;
-    // --default-layout-horizontal-spacer: 24px;
+    --default-layout-header-height: 60px;
+    --default-layout-width: 100%;
+    --default-layout-horizontal-spacer: 24px;
 
     --font-family: 'ProximaNova', sans-serif;
 }
@@ -25,4 +25,24 @@ body {
     text-rendering: optimizeSpeed;
     color: var(--text-color);
     overflow-y: overlay;
+}
+
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
