Create list movie

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 
 :root {
-    // --primary: #007fff;
+    --primary: #007fff;
     --black: #000;
     --text-color: #161823;
     --white: #fff;
