--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    // z-index: 10;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -22,4 +22,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.active {
+    color: var(--primary);
 }
