--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -11,12 +11,12 @@
     .container-detail{
         width: 100%;
         margin: 0 20px;
-        .item-btn-review{
-            margin: 20px 0;
-        }
 
-        .comment{
-            margin-top: 20px;
+        .review{
+            .btn-comment{
+                margin: 20px 0;
+            }
         }
+        
     }
 }
