--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -6,13 +6,13 @@
     
     .image-detail{
         width: 100%;
-        height: 100%;
     }
     .container-detail{
         width: 100%;
         margin: 0 20px;
 
         .review{
+            margin-top: 20px;
             .btn-comment{
                 margin: 20px 0;
             }
